--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
-cmake_minimum_required(VERSION 3.15)
-project(Personne-exo-cpp)
+cmake_minimum_required(VERSION 3.9)
+project(sonar_scanner_example)
 
-set(CMAKE_CXX_STANDARD 14)
-
-
-add_subdirectory(src)
+set(CMAKE_CXX_STANDARD 17)
+file(GLOB SOURCES src/*.cpp)
+add_executable(sonar_scanner_example ${SOURCES})
