--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,5 @@ cmake_minimum_required(VERSION 3.9)
 project(sonar_scanner_example)
 
 set(CMAKE_CXX_STANDARD 17)
-file(GLOB SOURCES src/*.cpp)
-file(GLOB SOURCES include/*.h)
+file(GLOB SOURCES src/*.cpp include/*.h)
 add_executable(sonar_scanner_example ${SOURCES})
