--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0-SNAPSHOT
 # =====================================================
 
 # SQ standard properties
-sonar.sources=src
+sonar.sources=.
 
 # Properties specific to the C/C++ analyzer:
 # Encoding of the source code. Default is default system encoding
